--- a/WTO/Views/Partial/Dashboard/DashboardRequestResponse.cshtml
+++ b/WTO/Views/Partial/Dashboard/DashboardRequestResponse.cshtml
@@ -151,7 +151,7 @@
                                             <div class="col-xs-8 col-sm-8"><p>@Model.objRequestForStakeholderResponse[0].Text</p></div>
                                             if (Convert.ToInt32(Model.objRequestForStakeholderResponse[0].Count) > 0)
                                             {
-                                               <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 1 })">@Model.objRequestForStakeholderResponse[0].Count</a></p></div>
+                                            <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("NotificationStakeholderList", "WTO", new { PageIndex = 1, PageSize = 10, Status = 1 })">@Model.objRequestForStakeholderResponse[0].Count</a></p></div>
                                             }
                                             else
                                             {
@@ -174,7 +174,7 @@
                                             <div class="col-xs-8 col-sm-8"><p>@Model.objRequestForStakeholderResponse[1].Text</p></div>
                                             if (Convert.ToInt32(Model.objRequestForStakeholderResponse[1].Count) > 0)
                                             {
-                                               <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("Index", "NotificationList", new { PageIndex = 1, PageSize = 10, StatusId = 1 })">@Model.objRequestForStakeholderResponse[1].Count</a></p></div>
+                                            <div class="col-xs-4 col-sm-4 text-right processingcount"><p><a href="@Url.Action("NotificationStakeholderList", "WTO", new { PageIndex = 1, PageSize = 10, Status = 2 })">@Model.objRequestForStakeholderResponse[1].Count</a></p></div>
                                             }
                                             else
                                             {
