--- a/WTO/Views/WTO/NotificationStakeholderList.cshtml
+++ b/WTO/Views/WTO/NotificationStakeholderList.cshtml
@@ -1,5 +1,220 @@
-﻿@{
+﻿@model BusinessObjects.Notification.StakeholderMailSentReceive
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="container-fluid">
+    <div class="row bodybackground">
+        <div class="col-xs-12 col-sm-12 col-md-12">
+            <div class="row topbg">
+                <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20 bottom-offset-10">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12">
+                            <h4 class="black-color" style="margin-top: 0px;">
+                                <img src="~/contents/img/bellicon.png" alt="" style="margin-right: 15px;"><b>Stakeholder List</b></h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20">
+                <div class="row darkBlueblackbackground padding-10">
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+                        <h4 class="white-color">Stakeholder List <span style="color:#000;" id="NotificationCount">(@Model.TotalCount)</span></h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-12">
+                <div class="row" style="box-shadow: 0 0px 0 #fff, 0 1px 6px rgba(0,0,0, 0.1);">
+                    <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20">
+                        <div class="col-xs-12 col-sm-12 col-md-12 whitebackground padding-bottom-10 ">
+                            <div class="col-xs-12 col-sm-12 col-md-12 lightgraybg" style="border-radius: 10px;">
+                                <div class="row top-offset-20">
+                                    <div class="col-xs-12 col-sm-4 col-md-3">
+                                        <div class="form-group has-feedback ">
+                                            <label>From</label>
+                                            <input id="txtfromdate" type="text" class="form-control date-picker textboxcontrol" value="@ViewBag.FromDate" />
+                                            <i id="fromdateclender" class="glyphicon glyphicon-calendar form-control-feedback blue-color"></i>
+                                            <a href="#" class="crosstofromdate"><i id="fromdatecross" class='glyphicon glyphicon-remove blue-color hidden' onclick="return txtfromdateClear();"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12 col-sm-4 col-md-3">
+                                        <div class="form-group has-feedback ">
+                                            <label>To</label>
+                                            <input id="txttodate" type="text" class="form-control date-picker textboxcontrol" value="@ViewBag.ToDate"  />
+                                            <i id="fromdateclender" class="glyphicon glyphicon-calendar form-control-feedback blue-color"></i>
+                                            <a href="#" class="crosstofromdate"><i id="fromdatecross" class='glyphicon glyphicon-remove blue-color hidden' onclick="return txtfromdateClear();"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12 col-sm-4 col-md-3">
+                                        <div class="form-group has-feedback ">
+                                            <label>Status</label>
+                                            <select id="ddlType" class="form-control textboxcontrol" >
+                                                <option value="0" selected>All</option>
+                                                <option value="1">Response Received</option>
+                                                <option value="2">Response Not Received</option>
+                                            </select>
+                                            <script>
+                                                $('#ddlType').val(@ViewBag.Status);
+                                            </script>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-12 col-sm-12 col-md-3">
+                                        <div class="form-group">
+                                            <label class="sr-only">Search</label>
+                                            <a class="btn btn-blue pull-right left-offset-10 top-offset-20" href="@Url.Action("WTODashboard", "WTO")"><img src="/contents/img/back-16.png">&nbsp;Back </a>
+                                            <a class="btn btn-red pull-right left-offset-10 top-offset-20" onclick="return Clear();"><span class="glyphicon glyphicon-remove"></span>Clear</a>
+                                            <a class="btn btn-blue pull-right left-offset-10 top-offset-20" onclick="return Search(1);"><span class="glyphicon glyphicon-search"></span>Search</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row" id="divContent">
+                                <div class="col-xs-12 col-sm-12 col-md-12 top-offset-20">
+                                    <div class="table-responsive notificationlist">
+                                        <table class="table table-bordered display" id="notificationlist" cellspacing="0" width="100%">
+                                            <thead class="second-blackbackground">
+                                                <tr>
+                                                    <th class="col-sm-3">Organisation</th>
+                                                    <th class="col-sm-2">Contact</th>
+                                                    <th class="col-sm-2">Designation</th>
+                                                    <th class="col-sm-3 text-center">HSCode</th>
+                                                    <th class="col-sm-1 text-center">Mail Sent</th>
+                                                    <th class="col-sm-1 text-center">Response Received</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="NotificationData">
+                                                @if (Model.objRelatedStakeHolders != null)
+                                                {
+                                                    if (Model.objRelatedStakeHolders.Count > 0)
+                                                    {
+                                                        foreach (var Item in Model.objRelatedStakeHolders)
+                                                        {
+                                                            <tr>
+                                                                <td>@Item.OrgName</td>
+                                                                <td>@Item.FullName</td>
+                                                                <td>@Item.Designation</td>
+                                                                <td class="text-center">@Item.HSCodes</td>
+                                                                <td class="text-center">@Item.MailCount</td>
+                                                                <td class="text-center">@Item.ResponseCount</td>
+                                                            </tr>
+                                                        }
+                                                    }
+                                                }
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-
+        </div>
+    </div>
+</div>
+@Html.Hidden("hdnPageIndex", "1")
+@Html.Hidden("hdnNotificationCount", (Convert.ToInt64(Model.TotalCount.Length > 0 ? Model.TotalCount : "0")))
+@if (Decimal.Divide(Convert.ToInt64(Model.TotalCount.Length > 0 ? Model.TotalCount : "0"), 10) > Convert.ToInt64(Model.TotalCount.Length > 0 ? Model.TotalCount : "0") / (Request["PageSize"] == null ? 10 : Convert.ToInt32(Request["PageSize"])))
+{
+    @Html.Hidden("hdnMaxPageIndex", Convert.ToInt64(Model.TotalCount.Length > 0 ? Model.TotalCount : "0") / (Request["PageSize"] == null ? 10 : Convert.ToInt32(Request["PageSize"])) + 1)
+}
+else
+{
+    @Html.Hidden("hdnMaxPageIndex", Convert.ToInt64(Model.TotalCount.Length > 0 ? Model.TotalCount : "0") / (Request["PageSize"] == null ? 10 : Convert.ToInt32(Request["PageSize"])))
+}
+<script>
+    var IsScrollingOnce = true;
+    function Search(PageIndx) {
+        ShowGlobalLodingPanel();
+        var DateFrom = $('#txtfromdate').val().trim();
+        var DateTo = $('#txttodate').val().trim();
+        if ((DateFrom != '' && DateFrom != null) && (DateTo != '' && DateTo != null)) {
+            var to = new Date(DateTo);
+            var from = new Date(DateFrom);
+            if (to < from) {
+                Alert("Alert", "To date can not less than from date.<br/>", "Ok");
+            }
+        }
+        var obj = {
+            FromDate: $('#txtfromdate').val().trim(),
+            ToDate: $('#txttodate').val().trim(),
+            Status: $('#ddlType').val(),
+            PageIndex: PageIndx,
+            PageSize: 10
+        }
+        $.ajax({
+            url: "/api/NotificationList/GetStakeholderMailSentResponse",
+            async: false,
+            type: "POST",
+            data: JSON.stringify(obj),
+            contentType: "application/json; charset=utf-8",
+            success: function (result) {
+                $('#divPaginationLoadingPanel').addClass('hidden');
+                if (result != null) {
+                    if (PageIndx == 1) {
+                        var Total = parseInt(result.TotalCount);
+                        var tmpPages = Total / 10;
+                        var tmpArr = tmpPages.toString().split('.');
+                        var TotalPages = 0;
+                        if (parseInt(tmpArr[1]) > 0)
+                            TotalPages = parseInt(tmpArr[0]) + 1;
+                        else
+                            TotalPages = parseInt(tmpArr[0]);
+                        $('[id$=hdnMaxPageIndex]').val(TotalPages);
+                        $('#lblCount').text(parseInt(result.TotalCount));
+                        $('#NotificationData').empty();
+                    }
+                    var NewRow = '';
+                    if (result.objRelatedStakeHolders != null && result.objRelatedStakeHolders.length > 0) {
+                        $.each(result.objRelatedStakeHolders, function (i, v) {
+                            NewRow += '<tr>';
+                            NewRow += '<td>' + v.OrgName + '</td>';
+                            NewRow += '<td>' + v.FullName + '</td>';
+                            NewRow += '<td>' + v.Designation + '</td>';
+                            NewRow += '<td class="text-center">' + v.HSCodes + '</td>';
+                            NewRow += '<td class="text-center">' + v.MailCount + '</td>';
+                            NewRow += '<td class="text-center">' + v.ResponseCount + '</td></tr>';
+                        })
+                    }
+                    else
+                        NewRow += '<tr><td colspan="6">No Record Found ...</td></tr>';
+                    $('#NotificationCount').text('(' + result.TotalCount + ')');
+                    $('#hdnNotificationCount').val(result.TotalCount);
+                    $('#NotificationData').append(NewRow);
+                }
+                HideGlobalLodingPanel();
+                IsScrollingOnce = true;
+            },
+            failure: function (result) {
+                Alert("Alert", "Something went wrong.<br/>", "Ok");
+            },
+            error: function (result) {
+                Alert("Alert", "Something went wrong.<br/>", "Ok");
+            },
+            complete: function () {
+            }
+        })
+    }
+    function Clear() {
+        $('#ddlType').val('0');
+        $('#txtfromdate').val('');
+        $('#txttodate').val('');
+        Search(1);
+    }
+    $(window).on("scroll", function (e) {
+        var $o = $(e.currentTarget);
+        if ($(window).scrollTop() + $(window).innerHeight() >= $(document).height() - 25 && IsScrollingOnce) {
+            IsScrollingOnce = false;
+            $('#divPaginationLoadingPanel').removeClass('hidden');
+            var NewVal = 0;
+            var NewVal = Number($('#hdnPageIndex').val()) + Number(1);
+            var MaxVal = parseInt($('#hdnMaxPageIndex').val());
+            if (NewVal <= MaxVal) {
+                Search(NewVal);
+                $('#hdnPageIndex').val(NewVal);
+            }
+            else
+                $('#divPaginationLoadingPanel').addClass('hidden');
+        }
+    });
+</script>
