--- a/WTO/Views/WTO/NotifyingMemberList.cshtml
+++ b/WTO/Views/WTO/NotifyingMemberList.cshtml
@@ -2,6 +2,32 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<style>
+
+      .ui-autocomplete-loading {
+            background: white url('http://jqueryui.com/demos/autocomplete/images/ui-anim_basic_16x16.gif') right center no-repeat;
+        }
+
+        .ui-dialog {
+            overflow: visible !important;
+        }
+        .ui-autocomplete {
+            max-height: 200px;
+            overflow-y: auto;
+            /* prevent horizontal scrollbar */
+            overflow-x: hidden;
+        }
+        /* IE 6 doesn't support max-height
+        * we use height instead, but this forces the menu to always be this tall
+        */
+        * html .ui-autocomplete {
+            height: 200px;
+        }
+</style>
+<link href="~/contents/css/css/jquery-ui.css" rel="stylesheet" />
+<script src="~/contents/js/jquery-ui.js"></script>
+<link href="~/contents/css/css/bootstrap-combobox.css" rel="stylesheet" />
+<script src="~/contents/js/bootstrap-combobox.js"></script>
 <div class="container-fluid">
     <div class="row bodybackground">
         <div class="col-xs-12 col-sm-12 col-md-12">
@@ -32,13 +58,20 @@
                                     <div class="col-xs-12 col-sm-4 col-md-3">
                                         <div class="form-group">
                                             <label>HSCode</label>
-                                            <input type="text" class="form-control textboxcontrol" id="txtHscode" value="@ViewBag.Hscode">
+                                            <input type="text" class="form-control textboxcontrol" id="txtHscode" placeholder="Hscode" value="@ViewBag.Hscode">
                                         </div>
                                     </div>
                                     <div class="col-xs-12 col-sm-4 col-md-3">
                                         <div class="form-group">
                                             <label>Country Name</label>
-                                            <input type="text" class="form-control textboxcontrol" id="txtCountry">
+                                            @if (@Model.CountryList != null)
+                                            {
+                                                @Html.DropDownListFor(m => Model.CountryList, new SelectList(Model.CountryList, "CountryId", "Name"), "All", new { Id = "ddlCountry", Class = "form-control textboxcontrol" })
+                                            }
+                                            else
+                                            {
+                                                <select id="ddlCountry" class="form-control textboxcontrol">No Country</select>
+                                            }
                                         </div>
                                     </div>
                                     <div class="col-xs-12 col-sm-4 col-md-3">
@@ -62,9 +95,10 @@
                                     <div class="col-xs-12 col-sm-12 col-md-12">
                                         <div class="form-group">
                                             <label class="sr-only">Search</label>
+                                            <a class="btn btn-blue pull-right left-offset-10" href="@Url.Action("WTODashboard", "WTO")"><img src="/contents/img/back-16.png">&nbsp;Back </a>
                                             <a href="#" class="btn btn-red pull-right left-offset-10" onclick="return Clear();" style="margin-bottom: 20px;"><span class="glyphicon glyphicon-remove"></span>Clear</a>
                                             <a href="#" class="btn btn-blue pull-right left-offset-10" onclick="return Search(1);" style="margin-bottom: 20px;"><span class="glyphicon glyphicon-search"></span>Search</a>
-                                        </div>
+                                          </div>
                                     </div>
                                 </div>
                             </div>
@@ -74,9 +108,9 @@
                                         <table class="table table-bordered display" id="notificationlist" cellspacing="0" width="100%">
                                             <thead class="second-blackbackground">
                                                 <tr>
-                                                    <th>Country Name</th>
-                                                    <th>Country Code</th>
-                                                    <th>Notification Count</th>
+                                                    <th class="col-sm-4">Country Name</th>
+                                                    <th class="col-sm-4 text-center">Country Code</th>
+                                                    <th class="col-sm-4 text-center">Notification Count</th>
                                                 </tr>
                                             </thead>
                                             <tbody id="NotificationData">
@@ -88,9 +122,8 @@
                                                         {
                                                             <tr>
                                                                 <td>@Item.CountryName</td>
-                                                                <td>@Item.CountryCode</td>
-                                                                <td>@Item.NotificationCount</td>
-                                                                @*<td><a href="@Url.Action("Index", "NotificationList",new { PageIndex = 1, PageSize = 10, CountryId=Item.CountryId })">@Item.NotificationCount</a></td>*@
+                                                                <td class="text-center">@Item.CountryCode</td>
+                                                                <td class="text-center">@Item.NotificationCount</td>
                                                             </tr>
                                                         }
                                                     }
@@ -122,12 +155,25 @@ else
     @Html.Hidden("hdnMaxPageIndex", Convert.ToInt64(Model.TotalCount.Length > 0 ? Model.TotalCount : "0") / (Request["PageSize"] == null ? 10 : Convert.ToInt32(Request["PageSize"])))
 }
 <script>
+    $(function () {
+        $('#ddlCountry').combobox();
+    
+    })
     var IsScrollingOnce = true;
     function Search(PageIndx) {
         ShowGlobalLodingPanel();
+        var DateFrom = $('#txtfromdate').val().trim();
+        var DateTo = $('#txttodate').val().trim();
+        if ((DateFrom != '' && DateFrom != null) && (DateTo != '' && DateTo != null)) {
+            var to = new Date(DateTo);
+            var from = new Date(DateFrom);
+            if (to < from) {
+                Alert("Alert", "To date can not less than from date.<br/>", "Ok");
+            }
+        }
         var obj = {
             Hscode: $('#txtHscode').val().trim(),
-            CountryName: $('#txtCountry').val().trim(),
+            CountryName: $('[id$=ddlCountry]').val(),
             FromDate: $('#txtfromdate').val().trim(),
             ToDate: $('#txttodate').val().trim(),
             PageIndex: PageIndx,
@@ -161,11 +207,12 @@ else
                             debugger
                             NewRow += '<tr>';
                             NewRow += '<td>' + v.CountryName + '</td>';
-                            NewRow += '<td>' + v.CountryCode + '</td>';
-                            NewRow += '<td>' + v.NotificationCount + '</td></tr>';
-                          //  NewRow += '<td><a href="/NotificationList?PageIndex=1&PageSize=10&CountryId=' + v.CountryId + '">' + v.NotificationCount + '</a></td></tr>';
+                            NewRow += '<td class="text-center">' + v.CountryCode + '</td>';
+                            NewRow += '<td class="text-center">' + v.NotificationCount + '</td></tr>';
                         })
                     }
+                    else
+                        NewRow += '<tr><td colspan="3">No Record Found ...</td></tr>';
                     $('#NotificationCount').text('(' + result.TotalCount + ')');
                     $('#hdnNotificationCount').val(result.TotalCount);
                     $('#NotificationData').append(NewRow);
@@ -185,7 +232,8 @@ else
     }
     function Clear() {
         $('#txtHscode').val('');
-        $('#txtCountry').val('');
+        $('[id$=ddlCountry]').val('');
+        $('.combobox-container').find('.glyphicon-remove').click();
         $('#txtfromdate').val('');
         $('#txttodate').val('');
         Search(1);
