--- a/WTO/contents/css/css/wto.css
+++ b/WTO/contents/css/css/wto.css
@@ -1081,6 +1081,19 @@ a:hover, a:focus {
     .pdright {
         padding-right: 0px;
     }
+
+    .selecthrbodyinner {
+        background: #fff;
+        min-height: 300px;
+        max-height: 600px;
+        overflow: auto;
+    }
+
+    .adv {
+        position: relative !important;
+        right: 15px;
+        top: 0px !important;
+    }
 }
 
 @media screen and (min-width : 0px) and (max-width : 767px) {
