--- a/WTO/contents/css/css/Dashboard.css
+++ b/WTO/contents/css/css/Dashboard.css
@@ -474,3 +474,9 @@ btn, btn:hover, btn:active, btn:focus {
     outline: none;
     color: #555;
 }
+
+@media screen and (min-width : 768px) and (max-width : 1023px) {
+    .sm-top-offset-20 {
+        margin-bottom: 20px;
+    }
+}
