--- a/WTO/Views/Partial/ManageAccess/Language.cshtml
+++ b/WTO/Views/Partial/ManageAccess/Language.cshtml
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12">
         <label class="table-heading">Language (@Model.TotalCount)</label>
-        <a onclick="AddLanguagePopup();" class="btn btn-blue btn-padding pull-right bottom-offset-10 top-offset-10" data-target="#AddLanguage" data-toggle="modal">Add Language</a>
+        <a onclick="AddLanguagePopup();" class="btn btn-blue btn-padding pull-right bottom-offset-10" data-target="#AddLanguage" data-toggle="modal">Add Language</a>
         <div class="table-responsive nopaging notificationlist top-offset-20" st>
             <table class="table table-bordered table-fixed">
                 <thead class="second-blackbackground">
@@ -91,7 +91,7 @@
                                     <div class="col-sm-offset-3 col-sm-9">
                                         <div class="row">
                                             <div class="col-sm-6">
-                                                <a href="#" id="LanguageSaveUpdate" class="btn btn-dark-green btn-block btn-padding" onclick="Languagevalidate();">Save</a>
+                                                <a href="#" id="LanguageSaveUpdate" class="btn btn-dark-green btn-block btn-padding bottom-offset-10" onclick="Languagevalidate();">Save</a>
                                             </div>
                                             <div class="col-sm-6">
                                                 <a href="#" class="btn btn-red btn-block btn-padding" data-dismiss="modal">Close</a>
