--- a/WTO/Views/Partial/ManageAccess/Template.cshtml
+++ b/WTO/Views/Partial/ManageAccess/Template.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12">
         <label class="table-heading">Templates (@(Model.Templates == null ? 0 : Model.Templates.Count))</label>
-        <a href="#" class="btn btn-blue btn-padding pull-right bottom-offset-10 top-offset-10" data-toggle="modal" onclick="AddTemplatePopup()">Add Template</a>
+        <a href="#" class="btn btn-blue btn-padding pull-right bottom-offset-10" data-toggle="modal" onclick="AddTemplatePopup()">Add Template</a>
         <div class="table-responsive nopaging notificationlist top-offset-20" st>
             <table class="table table-bordered table-fixed">
                 <thead class="second-blackbackground">
@@ -124,7 +124,7 @@
                                     <div class="col-sm-offset-3 col-sm-9">
                                         <div class="row">
                                             <div class="col-sm-6">
-                                                <a href="#" id="TemplateSaveUpdate" class="btn btn-dark-green btn-block btn-padding" onclick="TemplateValidate();">Save</a>
+                                                <a href="#" id="TemplateSaveUpdate" class="btn btn-dark-green btn-block btn-padding bottom-offset-10" onclick="TemplateValidate();">Save</a>
                                             </div>
                                             <div class="col-sm-6">
                                                 <a href="#" class="btn btn-red btn-block btn-padding" data-dismiss="modal">Close</a>
